<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/gradient25">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="1"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="30dp"
            android:layout_row="0"
            android:text="@string/vehical"
            android:textSize="28sp"
            android:textColor="#FFFFFF"
            android:typeface="monospace" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="333dp"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="25dp"
            android:layout_row="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="47dp"
                android:layout_column="0"
                android:layout_row="0"
                android:paddingTop="20dp"
                android:text="@string/vehical_type"
                android:textSize="18sp"
                android:textColor="#FFFFFF"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/txtVehical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="-"
                android:textColor="#FFFFFF"
                android:textSize="20sp" 
                android:typeface="monospace"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="47dp"
                android:layout_column="0"
                android:layout_marginTop="10dp"
                android:layout_row="0"
                android:paddingTop="20dp"
                android:text="@string/engine_size"
                android:textSize="18sp" 
                android:textColor="#FFFFFF"
                android:typeface="monospace"/>

            <Spinner
                android:id="@+id/spinner2"
                style="@style/SpinnerTrib"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:textColor="#FFFFFF"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="47dp"
                android:layout_column="0"
                android:layout_marginTop="10dp"
                android:layout_row="0"
                android:paddingTop="20dp"
                android:text="@string/gas"
                android:textSize="18sp" 
                android:textColor="#FFFFFF"
                android:typeface="monospace"/>

            <Spinner
                android:id="@+id/spinner3"
                style="@style/SpinnerTrib"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:textColor="#FFFFFF"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_column="0"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="20dp"
            android:layout_row="1"
            android:background="@drawable/ok" />
    </GridLayout>

</LinearLayout>