<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient25"
    android:orientation="vertical" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="1"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="30dp"
            android:layout_row="0"
            android:text="@string/vehical"
            android:textColor="#FFFFFF"
            android:textSize="28sp"
            android:typeface="monospace" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="356dp"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp"
            android:layout_row="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="47dp"
                android:paddingTop="20dp"
                android:text="@string/vehical_type"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:typeface="monospace" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/txtVehical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="0.99"
                    android:text="-"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:typeface="monospace" />

                <Button
                    android:id="@+id/btnChangeVehical"
                    style="@style/ButtonTrib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shadowColor="@color/common_signin_btn_dark_text_disabled"
                    android:text="@string/change"
                    android:textColor="#FFFFFF"
                    android:textSize="13sp"
                    android:typeface="monospace" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="47dp"
                android:layout_marginTop="10dp"
                android:paddingTop="20dp"
                android:text="@string/engine_size"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:typeface="monospace" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/txtEngine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1.06"
                    android:text="-"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:typeface="monospace" />

                <Button
                    android:id="@+id/btnChangeEngine"
                    style="@style/ButtonTrib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shadowColor="@color/common_signin_btn_dark_text_disabled"
                    android:text="@string/change"
                    android:textColor="#FFFFFF"
                    android:textSize="13sp"
                    android:typeface="monospace" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="47dp"
                android:layout_marginTop="10dp"
                android:paddingTop="20dp"
                android:text="@string/gas"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:typeface="monospace" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/txtGas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="0.95"
                    android:text="-"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:typeface="monospace" />

                <Button
                    android:id="@+id/btnChangeGas"
                    style="@style/ButtonTrib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shadowColor="@color/common_signin_btn_dark_text_disabled"
                    android:text="@string/change"
                    android:textColor="#FFFFFF"
                    android:textSize="13sp"
                    android:typeface="monospace" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="47dp"
                    android:layout_marginTop="10dp"
                    
                    android:text="@string/gasPrice"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:typeface="monospace" >
                </TextView>
                
                 <TextView
                    android:id="@+id/txtGasPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="0.85"
                    android:layout_marginTop="10dp"
                    
                    android:text="-"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:typeface="monospace" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnConfirm"
            style="@style/ButtonTrib"
            android:layout_column="0"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="20dp"
            android:layout_row="1"
            android:shadowColor="@color/common_signin_btn_dark_text_disabled"
            android:text="@string/confirm"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:typeface="monospace" />

    </GridLayout>

</LinearLayout>